商品一覧表示機能最終

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,10 +131,16 @@
       <% if @items.exists? %>
         <% @items.each do |item| %>
           <li class='list'>
-            <%= link_to items_path(item) do %>
+            <%= link_to "#" do %>
               <div class='item-img-content'>
                 <%= image_tag item.image, class: "item-img" %>
               </div>
+
+              <%# 商品が売れていればsold outを表示しましょう %>
+              <%#<div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+              <%# //商品が売れていればsold outを表示しましょう %>
 
               <div class='item-info'>
                 <h3 class='item-name'>
@@ -145,11 +151,9 @@
               <div class='item-price'>
                 <span>
                   <%= item.price %>円<br>
-                  <% if item.whopay_id == 2 %>
-                    着払い（購入者負担）
-                  <% elsif item.whopay_id == 3 %>
-                    送料込み（出品者負担）
-                  <% end %>
+                  <div class='item-whopay' >
+                    <%= item.whopay.name %>
+                  </div>
                 </span>
                 <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
