--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,4 @@
+<%= include_gon %>
 <%= render "shared/second-header"%>
 
 <div class='transaction-contents'>
@@ -43,7 +44,7 @@
             <label class="form-text">カード情報</label>
             <span class="indispensable">必須</span>
           </div>
-          <div id="number-form" class="input-default"></div>
+          <div id="number-form" class="input-default" placeholder="カード番号"></div>
           <div class='available-card'>
             <%= image_tag 'card-visa.gif', class: 'card-logo'%>
             <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
@@ -57,7 +58,7 @@
             <span class="indispensable">必須</span>
           </div>
           <div class='input-expiration-date-wrap'>
-            <div id="expiry-form" class="input-default"></div>
+            <div id="expiry-form" class="input-default" placeholder="月 / 日"></div>
           </div>
         </div>
         <div class="form-group">
@@ -65,7 +66,7 @@
             <label class="form-text">セキュリティコード</label>
             <span class="indispensable">必須</span>
           </div>
-          <div id="cvc-form" class="input-default"></div>
+          <div id="cvc-form" class="input-default" placeholder="CVC"></div>
         </div>
       </div>
       <%# /カード情報の入力 %>
